kyverno/policies/canary/canary.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: canary-resources
  annotations:
    policies.kyverno.io/title: Canary rule to detect canary resources
    policies.kyverno.io/category: Canary
    policies.kyverno.io/description: >-
      This is the canary rule which detects canary resources in the cluster.
      This is to alert on stopped or missing background scan report alerts.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["configmaps"]
        resourceNames: ["kyverno-canary-resource"]
  validations:
    - expression: "false"
      message: "Found kyverno canary configMap in the cluster"
