kyverno/policies/canary/test/test-canary.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: kyverno-canary-resource
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: argocd-cmd-params-cm
data:
  application.namespaces: "*"
