kyverno/policies/canary/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-canary-rules
policies:
  - ../canary.yaml
resources:
  - test-canary.yaml
# variables: values.yaml
results:
  - policy: canary-resources
    rule: detect-canary-configmap
    kind: ConfigMap
    resources: ["kyverno-canary-resource"]
    result: fail

  - policy: canary-resources
    rule: detect-canary-configmap
    kind: ConfigMap
    resources: ["argocd-cmd-params-cm"]
    result: skip
